--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "serve": "static-server",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "dat.gui": "^0.6.5",
-    "static-server": "^3.0.0"
+    "script-loader": "^0.7.2",
+    "webpack": "^3.10.0"
   }
 }
