eslint formatting and bug fixes

--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "threejs-fast-raycast",
 
   "version": "1.0.0",
-  
+
   "description": "THREE.js extension for creating mesh BVH trees for fast raycasting on complex meshes.",
-  
+
   "main": "index.js",
-  
+
   "scripts": {
-    "serve": "static-server",
+    "start": "static-server",
     "build": "webpack"
   },
-  
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gkjohnson/threejs-raycast-updates.git"
   },
-  
+
   "keywords": [
     "graphics",
     "raycast",
@@ -30,19 +30,19 @@
   ],
 
   "author": "Garrett Johnson <garrett.kjohnson@gmail.com>",
-  
+
   "license": "MIT",
-  
+
   "bugs": {
     "url": "https://github.com/gkjohnson/threejs-raycast-updates/issues"
   },
-  
+
   "homepage": "https://github.com/gkjohnson/threejs-raycast-updates#readme",
-  
+
   "peerDependencies": {
     "three": "^0.89.0"
   },
-  
+
   "devDependencies": {
     "three": "^0.89.0",
     "stats.js": "^0.17.0",
