--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "threejs-fast-raycast",
-  "version": "1.0.0",
-  "description": "THREE.js extension for creating mesh BVH trees for fast raycasting on complex meshes.",
   "main": "index.js",
   "scripts": {
     "start": "static-server",
-    "build": "webpack"
+    "build": "npm run build-boundstree && npm run build-octree",
+    "build-boundstree": "parcel build ./example/boundsTree.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps",
+    "build-octree": "parcel build ./example/octree.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps"
   },
   "repository": {
     "type": "git",
@@ -32,12 +31,12 @@
     "three": "^0.89.0"
   },
   "devDependencies": {
-    "dat.gui": "^0.6.5",
+    "dat.gui": "^0.7.2",
     "eslint-config-mdcs": "^4.2.3",
+    "parcel-bundler": "^1.9.6",
     "script-loader": "^0.7.2",
     "static-server": "^2.2.1",
     "stats.js": "^0.17.0",
-    "three": "^0.89.0",
-    "webpack": "^3.10.0"
+    "three": "^0.89.0"
   }
 }
