--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "main": "index.js",
   "scripts": {
     "start": "static-server",
-    "build": "parcel build ./example/boundsTree.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps"
+    "build": "parcel build ./example/boundsTree.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps",
+    "test": "jest",
+    "lint": "eslint *.js ./test/*.js"
   },
   "repository": {
     "type": "git",
@@ -18,12 +20,17 @@
     "three": "^0.91.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
     "dat.gui": "^0.7.2",
     "eslint-config-mdcs": "^4.2.3",
+    "jest": "^23.6.0",
+    "jest-cli": "^23.6.0",
     "parcel-bundler": "^1.9.6",
     "script-loader": "^0.7.2",
     "static-server": "^2.2.1",
     "stats.js": "^0.17.0",
     "three": "^0.96.0"
-  }
+  },
+  "dependencies": {}
 }
