--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "main": "index.js",
   "scripts": {
     "start": "static-server",
-    "build": "parcel build ./example/boundsTree.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps"
+		"build": "parcel build ./example/boundsTree.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps",
+		"benchmark": "node benchmark --allow-natives-syntax"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,8 @@
     "three": "^0.91.0"
   },
   "devDependencies": {
+    "babel-register": "^6.26.0",
+    "benchmarkjs": "^0.1.8",
     "dat.gui": "^0.7.2",
     "eslint-config-mdcs": "^4.2.3",
     "parcel-bundler": "^1.9.6",
