--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-jest": "^23.6.0",
+    "babel-preset-env": "^1.7.0",
     "babel-require": "^1.0.1",
     "dat.gui": "^0.7.2",
     "eslint": "^5.5.0",
     "eslint-config-mdcs": "^4.2.3",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
-    "parcel-bundler": "^1.9.6",
+    "parcel-bundler": "^1.10.0",
     "script-loader": "^0.7.2",
     "static-server": "^2.2.1",
     "stats.js": "^0.17.0",
