Update babel to version 7, fix all security warnings

--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "three": "^0.91.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/register": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-require": "^1.0.1",
     "dat.gui": "^0.7.2",
     "eslint": "^5.5.0",
     "eslint-config-mdcs": "^4.2.3",
