--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "module": "src/index.js",
+	"module": "src/index.js",
+	"main": "umd/index.js",
   "scripts": {
     "start": "static-server",
-    "build": "parcel build ./example/boundsTree.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps --no-content-hash",
+    "build": " rollup -c & parcel build ./example/boundsTree.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps --no-content-hash",
     "test": "jest",
     "lint": "eslint ./src/*.js ./test/*.js",
     "benchmark": "node benchmark/index.js"
@@ -32,6 +33,7 @@
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "parcel-bundler": "^1.11.0",
+    "rollup": "^0.68.1",
     "script-loader": "^0.7.2",
     "static-server": "^2.2.1",
     "stats.js": "^0.17.0",
