--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "threejs-fast-raycast",
+  "name": "three-mesh-bvh",
   "version": "0.0.1",
   "description": "A BVH implementation to speed up raycasting against three.js meshes.",
   "module": "src/index.js",
