--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/gkjohnson/three-mesh-bvh#readme",
   "peerDependencies": {
-    "three": "^0.91.0"
+    "three": "^0.102.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
@@ -43,8 +43,8 @@
     "rollup": "^0.68.1",
     "script-loader": "^0.7.2",
     "static-server": "^2.2.1",
-    "stats.js": "^0.17.0",
-    "three": "^0.101.1"
+    "three": "^0.102.1",
+    "stats.js": "^0.17.0"
   },
   "dependencies": {}
 }
