--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "module": "src/index.js",
   "main": "umd/index.js",
   "scripts": {
-    "start": "parcel watch ./example/spherecast.html --out-dir ./example/bundle/ --public-url . --no-cache",
+    "start": "parcel watch ./example/shapecast.html --out-dir ./example/bundle/ --public-url . --no-cache",
     "build": "rollup -c & parcel build ./example/spherecast.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps --no-content-hash",
     "test": "jest",
     "lint": "eslint ./src/*.js ./test/*.js",
