--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/register": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.1.0",
+    "concurrently": "^4.1.0",
     "dat.gui": "^0.7.3",
     "eslint": "^5.14.1",
     "eslint-config-mdcs": "^4.2.3",
@@ -42,10 +43,10 @@
     "parcel-bundler": "^1.11.0",
     "rollup": "^0.68.1",
     "script-loader": "^0.7.2",
+    "simplex-noise": "^2.4.0",
     "static-server": "^2.2.1",
     "stats.js": "^0.17.0",
-    "three": "^0.102.1",
-    "concurrently": "^4.1.0"
+    "three": "^0.102.1"
   },
   "dependencies": {}
 }
