fix eslint warnings

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,15 @@
 {
 	"root": true,
-	"extends": "./node_modules/eslint-config-mdcs/index.js"
+	"extends": "./node_modules/eslint-config-mdcs/index.js",
+	"plugins": ["jest"],
+	"rules": {
+		"jest/no-disabled-tests": "warn",
+		"jest/no-focused-tests": "error",
+		"jest/no-identical-title": "error",
+		"jest/prefer-to-have-length": "warn",
+		"jest/valid-expect": "error"
+	},
+	"env": {
+		"jest/globals": true
+	}
 }
