--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "dat.gui": "^0.7.3",
     "eslint": "^5.14.1",
     "eslint-config-mdcs": "^4.2.3",
+    "eslint-plugin-jest": "^23.6.0",
     "jest": "^24.1.0",
     "jest-cli": "^24.8.0",
     "parcel-bundler": "^1.12.4",
