use type: module

--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.3.5",
   "description": "A BVH implementation to speed up raycasting against three.js meshes.",
   "module": "src/index.js",
-  "main": "umd/index.js",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "start": "concurrently \"parcel watch ./example/*.html --out-dir ./example/bundle/ --public-url . --no-cache\" \"rollup -w -c\" \"static-server\"",
     "generate-cast-functions": "node ./scripts/generate-cast-functions.js",
     "build": "npm run generate-cast-functions && rollup -c & parcel build ./example/*.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps --no-content-hash",
     "test": "npm run generate-cast-functions && jest",
     "lint": "npm run generate-cast-functions && eslint \"./src/*.js\" \"./test/*.js\" \"./example/*.js\"",
-    "benchmark": "npm run generate-cast-functions && node benchmark/index.js"
+    "benchmark": "npm run generate-cast-functions && node benchmark/run-benchmark.js"
   },
   "files": [
     "src/*",
@@ -50,7 +51,6 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
-    "@babel/register": "^7.12.1",
     "babel-jest": "^26.6.3",
     "concurrently": "^5.3.0",
     "dat.gui": "^0.7.3",
