--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
   "type": "module",
   "scripts": {
     "start": "concurrently \"parcel watch ./example/*.html --out-dir ./example/bundle/ --public-url . --no-cache\" \"rollup -w -c\" \"static-server\"",
-    "generate-cast-functions": "node ./scripts/generate-cast-functions.js",
-    "build": "npm run generate-cast-functions && rollup -c & parcel build ./example/*.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps --no-content-hash",
-    "test": "npm run generate-cast-functions && jest",
-    "lint": "npm run generate-cast-functions && eslint \"./src/*.js\" \"./test/*.js\" \"./example/*.js\"",
-    "benchmark": "npm run generate-cast-functions && node benchmark/run-benchmark.js"
+    "build": "rollup -c & parcel build ./example/*.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps --no-content-hash",
+    "test": "jest",
+    "lint": "eslint \"./src/*.js\" \"./test/*.js\" \"./example/*.js\"",
+    "benchmark": "node benchmark/run-benchmark.js"
   },
   "files": [
     "src/*",
