Add dev bundle for development builds

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "module": "src/index.js",
   "main": "umd/index.js",
   "scripts": {
-    "start": "concurrently \"parcel watch ./example/*.html --out-dir ./example/bundle/ --public-url . --no-cache\" \"rollup -w -c\" \"static-server\"",
+    "start": "concurrently \"parcel watch ./example/*.html --out-dir ./example/dev-bundle/ --public-url . --no-cache\" \"rollup -w -c\" \"static-server\"",
     "generate-cast-functions": "node ./scripts/generate-cast-functions.js",
     "build": "npm run generate-cast-functions && rollup -c & parcel build ./example/*.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps --no-content-hash",
     "test": "npm run generate-cast-functions && jest",
