remove umd package.json files

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "prepublishOnly": "npm run build"
   },
   "files": [
-    "src/*",
-    "umd/*"
+    "src/*"
   ],
   "keywords": [
     "graphics",
