--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.4.0",
   "description": "A BVH implementation to speed up raycasting against three.js meshes.",
   "module": "src/index.js",
-  "main": "src/index.js",
+  "main": "build/index.umd.cjs",
   "type": "module",
   "sideEffects": false,
   "scripts": {
