--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
   "type": "module",
   "sideEffects": false,
   "scripts": {
-    "generate-cast-functions": "node scripts/generate-cast-functions.js",
-    "start": "npm run generate-cast-functions && concurrently \"parcel watch ./example/*.html --out-dir ./example/dev-bundle/ --public-url . --no-cache\" \"rollup -w -c\" \"static-server\"",
-    "build": "npm run generate-cast-functions && rollup -c && parcel build ./example/*.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps --no-content-hash",
-    "test": "npm run generate-cast-functions && jest",
-    "lint": "npm run generate-cast-functions && eslint \"./src/**/*.js\" \"./test/**/*.js\" \"./example/*.js\"",
-    "benchmark": "npm run generate-cast-functions && node benchmark/run-benchmark.js",
+    "start": "concurrently \"parcel watch ./example/*.html --out-dir ./example/dev-bundle/ --public-url . --no-cache\" \"rollup -w -c\" \"static-server\"",
+    "build": "rollup -c && parcel build ./example/*.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps --no-content-hash",
+    "test": "jest",
+    "lint": "eslint \"./src/**/*.js\" \"./test/**/*.js\" \"./example/*.js\"",
+    "benchmark": "node benchmark/run-benchmark.js",
     "prepublishOnly": "npm run build"
   },
   "files": [
