--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,10 +21,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install
+        cache: 'npm'
+    - run: npm ci
     - run: npm run benchmark
     - run: npm run build
     - run: npm run lint
