--- a/.github/workflows/examples-build.js.yml
+++ b/.github/workflows/examples-build.js.yml
@@ -15,10 +15,10 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
@@ -26,8 +26,9 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build-examples --if-present
+
     - name: Commit Examples
-    - uses: EndBug/add-and-commit@v7
+      uses: EndBug/add-and-commit@v7
       with:
         add: 'example/bundle'
         branch: 'examples'
