--- a/.github/workflows/examples-build.js.yml
+++ b/.github/workflows/examples-build.js.yml
@@ -31,5 +31,5 @@ jobs:
       uses: EndBug/add-and-commit@v7
       with:
         add: 'example/bundle'
-        branch: 'examples'
+        branch: examples
         message: 'update builds'
