--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,6 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run benchmark
+    - run: npm run build
     - run: npm run lint
     - run: npm test
