--- a/babel.config.json
+++ b/babel.config.json
@@ -1,3 +1,7 @@
 {
-	"presets": [ "@babel/preset-env" ]
+	"presets": [ [ "@babel/preset-env", {
+		"targets": {
+			"node": "current"
+		}
+	} ] ]
 }
