--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "rollup -c",
     "build-examples": "parcel build ./example/*.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps --no-content-hash",
     "test": "jest",
+    "typecheck": "tsc --noEmit --strict",
     "lint": "eslint \"./src/**/*.js\" \"./test/**/*.js\" \"./example/*.js\"",
     "benchmark": "node benchmark/run-benchmark.js",
     "prepublishOnly": "npm run build"
@@ -55,21 +56,23 @@
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.4",
-    "babel-jest": "^26.6.3",
+    "@types/jest": "^27.0.2",
+    "@types/three": "^0.132.2",
+    "babel-jest": "^27.2.4",
     "concurrently": "^5.3.0",
     "dat.gui": "^0.7.7",
     "eslint": "^7.26.0",
     "eslint-config-mdcs": "^5.0.0",
     "eslint-plugin-jest": "^23.20.0",
-    "jest": "^26.6.3",
-    "jest-cli": "^26.6.3",
+    "jest": "^27.2.4",
     "parcel-bundler": "^1.12.5",
     "rollup": "^0.68.1",
     "script-loader": "^0.7.2",
     "simplex-noise": "^2.4.0",
     "static-server": "^2.2.1",
     "stats.js": "^0.17.0",
-    "three": "^0.133.0"
-  },
-  "dependencies": {}
+    "three": "^0.133.1",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.3"
+  }
 }
