fix: remove JSDOC, add tsd types test, refactor tsconfig.json, refactor typed, setup ts lint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,18 @@
 	},
 	"env": {
 		"jest/globals": true
-	}
+	},
+	"overrides": [
+		{
+			"files": ["*.ts"],
+			"parser": "@typescript-eslint/parser",
+			"plugins": [
+				"@typescript-eslint"
+			],
+			"rules": {
+				"no-unused-vars": ["error", { "args": "none" }],
+				"indent": [2, 2]
+			}
+		}
+	]
 }
