--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "rollup -c",
     "build-examples": "parcel build ./example/*.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps --no-content-hash",
     "test": "jest",
-    "test-ts": "tsd",
+    "tsc": "tsc --noEmit",
     "lint": "eslint \"./src/**/*.{js,ts}\" \"./test/**/*.{js,ts}\" \"./example/*.js\"",
     "benchmark": "node benchmark/run-benchmark.js",
     "prepublishOnly": "npm run build"
@@ -60,6 +60,7 @@
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.4",
+    "@types/eslint": "^7.28.1",
     "@types/jest": "^27.0.2",
     "@types/three": "^0.132.2",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -78,8 +79,6 @@
     "static-server": "^2.2.1",
     "stats.js": "^0.17.0",
     "three": "^0.133.1",
-    "ts-jest": "^27.0.5",
-    "tsd": "^0.17.0",
     "typescript": "^4.4.3"
   }
 }
