--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "types": "src/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "start": "concurrently \"parcel watch ./example/*.html --out-dir ./example/dev-bundle/ --public-url . --no-cache\" \"static-server\"",
+    "start": "concurrently \"parcel watch ./example/*.html --dist-dir ./example/dev-bundle/ --public-url . --no-cache --no-hmr\" \"static-server\"",
     "build": "rollup -c",
     "build-examples": "parcel build ./example/*.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps --no-content-hash",
     "test": "jest",
@@ -68,7 +68,7 @@
     "eslint-config-mdcs": "^5.0.0",
     "eslint-plugin-jest": "^23.20.0",
     "jest": "^27.2.4",
-    "parcel-bundler": "^1.12.5",
+    "parcel": "^2.0.0",
     "rollup": "^2.58.0",
     "script-loader": "^0.7.2",
     "simplex-noise": "^2.4.0",
