--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "concurrently \"parcel watch ./example/*.html --dist-dir ./example/dev-bundle/ --public-url . --no-cache --no-hmr\" \"static-server\"",
     "build": "rollup -c",
-    "build-examples": "parcel build ./example/*.html --out-dir ./example/bundle/ --public-url . --no-cache --no-source-maps --no-content-hash",
+    "build-examples": "parcel build ./example/*.html --dist-dir ./example/bundle/ --public-url . --no-cache --no-hmr --no-content-hash",
     "test": "jest",
     "lint": "eslint \"./src/**/*.{js,ts}\" \"./test/**/*.{js,ts}\" \"./example/*.js\" && tsc --noEmit",
     "benchmark": "node benchmark/run-benchmark.js",
