--- a/.github/workflows/benchmark-report.yml
+++ b/.github/workflows/benchmark-report.yml
@@ -1,14 +1,14 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Build Examples
+name: Run Benchmark Report
 
 on:
   pull_request:
     paths:
       - 'src/**'
       - 'package.json'
-			- 'benchmark/**'
+      - 'benchmark/**'
 
 permissions:
   contents: read
