--- a/.github/workflows/benchmark-report.yml
+++ b/.github/workflows/benchmark-report.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Git checkout
       uses: actions/checkout@v2
       with:
-        fetch-deth: 0
+        fetch-depth: 0
 
     - name: Use Node.js
       uses: actions/setup-node@v2
