--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "types": "src/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "start": "concurrently \"cd example && parcel watch ./*.html --dist-dir ./dev-bundle/ --public-url . --no-cache --no-hmr\" \"static-server\"",
+    "start": "parcel serve ./example/*.html --dist-dir ./example/dev-bundle/ --no-hmr",
     "build": "rollup -c",
-    "build-examples": "cd example && parcel build ./*.html --dist-dir ./bundle/ --public-url . --no-cache --no-content-hash",
+    "build-examples": "parcel build ./example/*.html --dist-dir ./bundle/ --public-url . --no-cache --no-content-hash",
     "test": "cd test && jest",
     "lint": "eslint \"./src/**/*.{js,ts}\" \"./test/**/*.{js,ts}\" \"./example/*.js\" && tsc --noEmit",
     "benchmark": "node benchmark/run-benchmark.js",
@@ -67,7 +67,7 @@
     "eslint-config-mdcs": "^5.0.0",
     "eslint-plugin-jest": "^23.20.0",
     "jest": "^27.2.4",
-    "parcel": "^2.0.0",
+    "parcel": "^2.9.3",
     "rollup": "^2.58.0",
     "script-loader": "^0.7.2",
     "simplex-noise": "^2.4.0",
