add bench compare

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "parcel": "^2.0.0",
     "rollup": "^2.58.0",
     "script-loader": "^0.7.2",
+    "simple-git": "^3.19.1",
     "simplex-noise": "^2.4.0",
     "static-server": "^2.2.1",
     "stats.js": "^0.17.0",
