--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "parcel serve ./example/*.html --dist-dir ./example/dev-bundle/ --no-hmr",
     "build": "rollup -c",
+    "build2": "rollup -c rollup-indirect.config.js",
     "build-examples": "cd example && parcel build ./*.html --dist-dir ./bundle/ --public-url . --no-cache --no-content-hash",
     "test": "cd test && jest",
     "lint": "eslint \"./src/**/*.{js,ts}\" \"./test/**/*.{js,ts}\" \"./example/*.js\" && tsc --noEmit",
@@ -65,8 +66,10 @@
     "eslint": "^7.32.0",
     "eslint-config-mdcs": "^5.0.0",
     "eslint-plugin-jest": "^23.20.0",
+    "glob": "^10.3.3",
     "jest": "^27.2.4",
     "parcel": "^2.0.0",
+    "preprocess": "^3.2.0",
     "rollup": "^2.58.0",
     "script-loader": "^0.7.2",
     "simple-git": "^3.19.1",
