--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   "sideEffects": false,
   "scripts": {
     "start": "parcel serve ./example/*.html --dist-dir ./example/dev-bundle/ --no-hmr",
-    "build": "rollup -c",
-    "build2": "rollup -c rollup-templating.config.js",
-    "build-examples": "cd example && parcel build ./*.html --dist-dir ./bundle/ --public-url . --no-cache --no-content-hash",
+    "build": "rollup -c rollup-templating.config.js && rollup -c",
+    "build-examples": "concurrently \"rollup -w -c rollup-templating.config.js\" \"cd example && parcel build ./*.html --dist-dir ./bundle/ --public-url . --no-cache --no-content-hash\"",
     "test": "cd test && jest",
     "lint": "eslint \"./src/**/*.{js,ts}\" \"./test/**/*.{js,ts}\" \"./example/*.js\" && tsc --noEmit",
     "benchmark": "node benchmark/run-benchmark.js",
@@ -63,6 +62,7 @@
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "babel-jest": "^27.2.4",
+    "concurrently": "^8.2.1",
     "eslint": "^7.32.0",
     "eslint-config-mdcs": "^5.0.0",
     "eslint-plugin-jest": "^23.20.0",
