--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "types": "src/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "start": "parcel serve ./example/*.html --dist-dir ./example/dev-bundle/ --no-hmr",
+    "start": "concurrently \"rollup -w -c rollup-templating.config.js\" \"parcel serve ./example/*.html --dist-dir ./example/dev-bundle/ --no-hmr\"",
     "build": "rollup -c rollup-templating.config.js && rollup -c",
-    "build-examples": "concurrently \"rollup -w -c rollup-templating.config.js\" \"cd example && parcel build ./*.html --dist-dir ./bundle/ --public-url . --no-cache --no-content-hash\"",
+    "build-examples": "cd example && parcel build ./*.html --dist-dir ./bundle/ --public-url . --no-cache --no-content-hash",
     "test": "cd test && jest",
     "lint": "eslint \"./src/**/*.{js,ts}\" \"./test/**/*.{js,ts}\" \"./example/*.js\" && tsc --noEmit",
     "benchmark": "node benchmark/run-benchmark.js",
@@ -70,7 +70,7 @@
     "jest": "^27.2.4",
     "parcel": "^2.0.0",
     "preprocess": "^3.2.0",
-    "rollup": "^2.58.0",
+    "rollup": "^3.28.1",
     "script-loader": "^0.7.2",
     "simple-git": "^3.19.1",
     "simplex-noise": "^2.4.0",
