--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,5 +1,9 @@
 name: "CodeQL"
 
+paths-ignore:
+  - "node_modules"
+  - "**/*.template.js"
+
 on:
   push:
     branches: [ "master" ]
@@ -26,6 +30,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - run: npm ci
+      - run: npm run build
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
