--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "three-mesh-bvh",
-  "version": "0.6.8",
+  "version": "0.7.0-beta.0",
   "description": "A BVH implementation to speed up raycasting against three.js meshes.",
   "module": "src/index.js",
   "main": "build/index.umd.cjs",
