--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "static-server": "^2.2.1",
     "stats.js": "^0.17.0",
     "three": "^0.151.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "vite": "^5.2.13"
   }
 }
