--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "types": "src/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "start": "concurrently \"rollup -w -c rollup-templating.config.js\" \"parcel serve ./example/*.html --dist-dir ./example/dev-bundle/ --no-hmr\"",
+    "start": "concurrently \"rollup -w -c rollup-templating.config.js\" \"vite --config ./vite.config.js\"",
     "build": "rollup -c rollup-templating.config.js && rollup -c",
     "build-silent": "rollup -c rollup-templating.config.js --silent && rollup -c --silent",
-    "build-examples": "npm run build && cd example && parcel build ./*.html --dist-dir ./bundle/ --public-url . --no-cache --no-content-hash",
+    "build-examples": "npm run build && vite build --config ./vite.config.js",
     "test": "npm run build-silent && cd test && jest",
     "lint": "eslint \"./src/**/*.{js,ts}\" \"./test/**/*.{js,ts}\" \"./example/*.js\" && tsc --noEmit",
     "benchmark": "npm run build-silent && node benchmark/run-benchmark.js",
@@ -69,7 +69,6 @@
     "eslint-plugin-jest": "^23.20.0",
     "glob": "^10.3.3",
     "jest": "^27.2.4",
-    "parcel": "^2.11.0",
     "preprocess": "^3.2.0",
     "rollup": "^3.28.1",
     "script-loader": "^0.7.2",
