--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "concurrently \"rollup -w -c rollup-templating.config.js\" \"vite --config ./vite.config.js\"",
     "build": "rollup -c rollup-templating.config.js && rollup -c",
     "build-silent": "rollup -c rollup-templating.config.js --silent && rollup -c --silent",
-    "build-examples": "npm run build && vite build --config ./vite.config.js",
+    "build-examples": "npm run build && vite build --config ./vite.config.js && cp ./example/coi-serviceworker.js ./example/bundle/",
     "test": "npm run build-silent && cd test && jest",
     "lint": "eslint \"./src/**/*.{js,ts}\" \"./test/**/*.{js,ts}\" \"./example/*.js\" && tsc --noEmit",
     "benchmark": "npm run build-silent && node benchmark/run-benchmark.js",
