Use recommended rules by default

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,13 @@
 {
 	"root": true,
-	"extends": "./node_modules/eslint-config-mdcs/index.js",
-	"plugins": ["jest"],
+	"extends": [ "eslint:recommended", "./node_modules/eslint-config-mdcs/index.js" ],
+	"plugins": [ "jest" ],
+	"ignorePatterns": [ "**/*.generated.js" ],
 	"rules": {
+		"no-inner-declarations": "off",
+		"no-constant-condition": "off",
+		// "no-constant-condition": [ "error", { "checkLoops": "exceptWhileTrue" } ],
+
 		"jest/no-disabled-tests": "warn",
 		"jest/no-focused-tests": "error",
 		"jest/no-identical-title": "error",
