--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "stats.js": "^0.17.0",
     "three": "^0.170.0",
     "typescript": "^5.1.3",
-    "vite": "^5.2.13"
+    "vite": "^5.2.13",
+    "seedrandom": "^3.0.5"
   }
 }
