--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
 			],
 			"rules": {
 				"no-unused-vars": ["error", { "args": "none" }],
-				"indent": [2, 2]
+				"indent": ["error", "tab"]
 			}
 		}
 	]
