--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,26 @@
 {
 	"root": true,
-	"extends": [ "eslint:recommended", "./node_modules/eslint-config-mdcs/index.js" ],
-	"plugins": [ "jest" ],
+	"extends": [
+		"eslint:recommended",
+		"./node_modules/eslint-config-mdcs/index.js",
+		"plugin:@vitest/legacy-recommended"
+	],
+	"plugins": [ "@vitest/eslint-plugin" ],
 	"ignorePatterns": [ "**/*.generated.js" ],
+	"env": {
+		"@vitest/env": true
+	},
 	"rules": {
 		"no-inner-declarations": "off",
 		"no-constant-condition": "off",
 		// "no-constant-condition": [ "error", { "checkLoops": "exceptWhileTrue" } ],
 
-		"jest/no-disabled-tests": "warn",
-		"jest/no-focused-tests": "error",
-		"jest/no-identical-title": "error",
-		"jest/prefer-to-have-length": "warn",
-		"jest/valid-expect": "error"
-	},
-	"env": {
-		"jest/globals": true
+		"@vitest/no-disabled-tests": "warn",
+		"@vitest/no-focused-tests": "error",
+		"@vitest/no-identical-title": "error",
+		"@vitest/prefer-to-have-length": "warn",
+		"@vitest/valid-expect": "error",
+		"@vitest/valid-describe-callback": 0
 	},
 	"overrides": [
 		{
