--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "@typescript-eslint/parser": "^8.40.0",
     "@vitest/browser": "^4.0.14",
     "@vitest/eslint-plugin": "^1.5.0",
+    "@vitest/utils": "^4.0.14",
+    "@vitest/web-worker": "^4.0.14",
     "concurrently": "^8.2.1",
     "eslint": "^8.56.0",
     "eslint-config-mdcs": "^5.0.0",
@@ -85,7 +87,7 @@
     "simple-git": "^3.19.1",
     "simplex-noise": "^2.4.0",
     "stats.js": "^0.17.0",
-    "three": "^0.179.0",
+    "three": "^0.168.0",
     "typescript": "^5.9.2",
     "vite": "^6.2.2",
     "vitest": "^4.0.14"
