--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.4",
+    "@eslint/js": "^9.0.0",
     "@types/eslint": "^7.28.1",
     "@types/node": "^24.3.1",
     "@types/three": "^0.179.0",
@@ -76,9 +77,10 @@
     "@vitest/utils": "^4.0.14",
     "@vitest/web-worker": "^4.0.14",
     "concurrently": "^8.2.1",
-    "eslint": "^8.56.0",
+    "eslint": "^9.0.0",
     "eslint-config-mdcs": "^5.0.0",
     "glob": "^10.3.3",
+    "globals": "^16.5.0",
     "jsdom": "^26.0.0",
     "jsdom-worker": "^0.3.0",
     "preprocess": "^3.2.0",
